--- a/marcoZero/style/style.css
+++ b/marcoZero/style/style.css
@@ -1,16 +1,17 @@
 
 .Marco-Zero{
-    height: 100%;
     margin: 0;
+
 }
 
 
 .informacoes{
-    margin: 40px;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex:1
+    width: auto;
+
 }
 
 #resumo{
@@ -20,3 +21,16 @@
     flex-direction: column;
     padding: 30px;
 }
+
+#links{
+    display: flex;
+}
+
+#link{
+    padding: 15px;
+    margin-right: 30px;
+    background-color: rgb(110, 200, 110);
+    color: white;
+    border-radius: 30px;
+}
+
