Atividade: Novos pontos turísticos

--- a/marcoZero/style/style.css
+++ b/marcoZero/style/style.css
@@ -34,3 +34,18 @@
     border-radius: 30px;
 }
 
+#mainNovosPontos{
+    display: flex;
+    margin-top: 100px;
+
+}
+
+#pontos{
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
