--- a/marcoZero/style/style.css
+++ b/marcoZero/style/style.css
@@ -26,7 +26,7 @@
     display: flex;
 }
 
-#link{
+.link{
     padding: 15px;
     margin-right: 30px;
     background-color: rgb(110, 200, 110);
@@ -40,12 +40,17 @@
 
 }
 
-#pontos{
+.pontos{
     padding: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
+}
+
+#rodape{
+    background-color: green;
+    padding: 5px;
 }
 
