--- a/marcoZero/style/style.css
+++ b/marcoZero/style/style.css
@@ -1,11 +1,10 @@
-
-*{
+* {
     margin: 0;
     background-color: rgb(181, 228, 181);
 }
 
 
-.informacoes{
+.informacoes {
     height: 80vh;
     display: flex;
     align-items: center;
@@ -14,7 +13,7 @@
 
 }
 
-#resumo{
+#resumo {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,11 +21,11 @@
     padding: 30px;
 }
 
-#links{
+#links {
     display: flex;
 }
 
-.link{
+.link {
     padding: 15px;
     margin-right: 30px;
     background-color: rgb(110, 200, 110);
@@ -34,18 +33,26 @@
     border-radius: 30px;
 }
 
-#mainNovosPontos{
+#mainNovosPontos {
     display: flex;
     margin-top: 100px;
 
 }
 
-.pontos{
+.pontos {
     padding: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
 }
 
+#listando {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.lista {
+    list-style-type: none;
+    margin-right: 10px;
+}
